--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="buttons">
       <button id="startBtn">Start Game</button>
       <button id="submitBtn" disabled>Submit</button>
+      <button id="skipBtn" disabled>Skip</button>
     </div>
 
     <p id="feedback"></p>
@@ -35,4 +36,3 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
-
